--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^2.44.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
