--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@mui/icons-material": "^5.16.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
     "@supabase/supabase-js": "^2.44.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
